[package]
name = "rotatingbuffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
env_logger = {version = "0.11.3", optional = true}
log = {version = "0.4.21", optional = true}

[features]
default = ["DEBUG_TRACING"]
DEBUG_TRACING = ["dep:env_logger", "dep:log"]
