[package]
name = "rotbuf"
version = "0.0.1"
edition = "2021"
authors = ["Stephen Maldonado"]
description = "RotBuf is a Queue implementation wrapped around the `Bytes` crates' BytesMut data structure."
readme = "README.md"
repository = "https://github.com/StephenMal/RotBuf"
license = "Apache-2.0"
keywords = ["bytes", "buffer", "queue", "rotating", "encoding"]
categories = ["encoding", "data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"

[features]
default = ["DEBUG_TRACING"]
DEBUG_TRACING = []
